fix(report): fix potential NPE on ReportDataDefinitionDto default values
relates to #OPT-5299